Added Subcategory and Service Models with actions and routes

--- a/Pipfile
+++ b/Pipfile
@@ -21,7 +21,7 @@ psycopg2-binary = "==2.9.10"
 python-dotenv = "==1.0.1"
 sqlalchemy = "==2.0.36"
 typing-extensions = "==4.12.2"
-werkzeug = "==3.0.4"
+werkzeug = "*"
 wtforms = "==3.2.1"
 flask-migrate = "*"
 
