--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "dotenv": "^16.4.5",
     "firebase": "^11.2.0",
     "framer-motion": "^11.11.9",
+    "lucide-react": "^0.473.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
