--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "dotenv": "^16.4.5",
@@ -22,6 +23,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss-animate": "^1.0.7"
   },
